--- a/DongGia-master/src/components/_footer/index.sass
+++ b/DongGia-master/src/components/_footer/index.sass
@@ -67,9 +67,10 @@ footer
 				&:hover
 						color: #f5b535
 						text-decoration: none
+	h2.moduleTitle
+		padding-top: 0
+		font-weight: 600
 	.no-gutters
-		h2
-			padding-top: 0
 		.address
 			padding-right: 20px
 			p
@@ -108,55 +109,64 @@ footer
 		@media (min-width: 1400px)
 			.address
 				padding-right: 83px
-	.receive-news
-		p
-			text-transform: none
-			color: lighten(black,33%)
-			font-weight: 500
-		.subscribenew
-			position: relative
-			z-index: 0
-			.subscribeinfo
-				border: 0
-				width: 100%
-				height: 35px
-				margin-bottom: 14px
-				background-color: rgba(255, 255, 255, 0.102)
-				font-family: 'Montserrat', sans-serif
-				line-height: 32px
-				padding-left: 1rem
-				color: #ffffff
-				&:focus
-					outline: none
-				&::placeholder
-					font-size: 12px
+	.col-lg-3,.col-sm-6
+		.ModuleContent
+			h2.module-title
+				font-weight: 600
+			.wrap-form
+				input
+					border: 0
+					width: 100%
+					height: 35px
+					margin-bottom: 14px
+					background-color: rgba(255, 255, 255, 0.102)
 					font-family: 'Montserrat', sans-serif
-					color: rgb(204, 204, 204)
-					line-height: 2.667
-			.subscribebutton
-				width: 100%
-				background-color: #ac8a42
-				background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
-				border: none
-				outline: none
-				height: 32px
-				color: #f6f3e9
-				font-family: Montserrat
-				font-size: 16px
-				font-weight: 500
-				line-height: 32px
-				text-transform: uppercase
+					line-height: 32px
+					padding-left: 1rem
+					padding-right: 1rem
+					color: #ffffff
+					&:focus
+						outline: none
+					&::placeholder
+						font-size: 12px
+						font-family: 'Montserrat', sans-serif
+						color: rgb(204, 204, 204)
+						line-height: 2.667
+				input.frm-btn-reset
+					display: none
+			.frm-btnwrap
 				position: relative
-				&:before
-					content: '\e87a'
-					font-size: 20px
-					font-family: 'Linearicons-free'
-					position: absolute
+				label
+					display: none
+				input.frm-btn-submit
+					width: 100%
+					background-color: #ac8a42
+					background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
+					border: none
+					outline: none
+					height: 35px
+					color: #f6f3e9
+					font-family: Montserrat
+					font-size: 16px
+					font-weight: 500
+					text-transform: uppercase
+					position: relative
 					display: inline-block
-					font-family: Linearicons-free
-					font-size: 20px
-					content: "\e87a"
+					margin-bottom: 0
+				&:before
+					content: '\f054'
+					font-size: 25px
+					font-family: 'Material Design Icons'
+					font-weight: 400
+					position: absolute
 					right: 5%
+					z-index: 99
+					height: 100%
+					display: flex
+					align-items: center
+					color: #ffffff
+			.frm-thanks
+				color: #ffffff
 	.copyright
 		justify-content: center
 		padding-top: 10px
