--- a/DongGia-master/src/components/contact/index.sass
+++ b/DongGia-master/src/components/contact/index.sass
@@ -69,11 +69,11 @@
 									font-family: 'Font Awesome 5 Free'
 									font-weight: 600
 									font-size: 16px
-			.Module-156
+			.Module-227
 				text-align: center
 				padding: 60px 30px
 				background-color: #f5f5f5
-				h3
+				h2.module-title
 					color: #474747
 					font-family: 'Montserrat', sans-serif
 					font-size: 18px
@@ -88,47 +88,50 @@
 					font-weight: 400
 					line-height: 22px
 					padding-bottom: 25px
-				.wrap-contact
-					.form-group
-						label
-							display: flex
-							padding-bottom: .5rem
-							color: rgb(102, 102, 102)
-							font-family: 'Montserrat', sans-serif
-							font-size: 14px
-							font-style: italic
-							font-weight: 400
-							line-height: 1.571
-							text-align: left
-							padding-top: 20px
-					.qtext
-						input
-							padding: 0 1rem
+				.form-group
+					display: flex
+					flex-direction: column
+					label
+						display: flex
+						padding-bottom: .5rem
+						color: rgb(102, 102, 102)
+						font-family: 'Montserrat', sans-serif
+						font-size: 14px
+						font-style: italic
+						font-weight: 400
+						line-height: 1.571
+						text-align: left
+						padding-top: 20px
+				.qtext
+					flex: 0 0 50%
+					max-width: 50%
+					input
+						padding: 0 1rem
+						border-radius: 5px
+						width: 100%
+						height: 45px
+						border: 1px solid #e1e1e1
+						background-color: #f5f5f5
+						outline: none
+						&:focus
+							box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.35)
 							border-radius: 5px
-							width: 100%
-							height: 45px
-							border: 1px solid #e1e1e1
+							border: 1px solid #d36e44
 							background-color: #f5f5f5
-							outline: none
-							&:focus
-								box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.35)
-								border-radius: 5px
-								border: 1px solid #d36e44
-								background-color: #f5f5f5
-					.qparagraph
-						textarea
-							outline: none
-							width: 100%
-							height: 90px
+				.qparagraph
+					textarea
+						outline: none
+						width: 100%
+						height: 90px
+						border-radius: 5px
+						border: 1px solid #e1e1e1
+						background-color: #f5f5f5
+						padding: .5rem 1rem
+						&:focus
+							box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.35)
 							border-radius: 5px
-							border: 1px solid #e1e1e1
+							border: 1px solid #d36e44
 							background-color: #f5f5f5
-							padding: .5rem 1rem
-							&:focus
-								box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.35)
-								border-radius: 5px
-								border: 1px solid #d36e44
-								background-color: #f5f5f5
 				.frm-btnwrap
 					text-align: right
 					padding-top: 22px
@@ -148,13 +151,15 @@
 						text-transform: uppercase
 						border: none
 						outline: none
+					.frm-btn-reset
+						display: none
 			@media (min-width: 360px)
 				.box-img
 					figure
 						figcaption
 							bottom: -15%
 							padding: 0 2rem
-				.Module-156
+				.Module-227
 					.frm-btnwrap
 						text-align: center
 			@media (min-width: 411px)
@@ -179,7 +184,7 @@
 						figcaption
 							bottom: 20%
 							padding: 0 3rem
-				.Module-156
+				.Module-227
 					flex: 0 0 50%
 					min-width: 50%
 					.frm-btnwrap
@@ -216,7 +221,7 @@
 						figcaption
 							bottom: 20%
 							padding: 0 4rem
-				.Module-156
+				.Module-227
 					flex: 0 0 60%
 					max-width: 60%
 			@media (min-width: 1440px)
