--- a/DongGia-master/src/components/new-event/index.sass
+++ b/DongGia-master/src/components/new-event/index.sass
@@ -1,47 +1,46 @@
 .new-event
 	.container
-		h2
-			padding-bottom: 35px
-		nav
-			padding: 0
-			display: flex
-			justify-content: center
-			align-items: center
-			text-align: center
-			flex-direction: row
-			list-style-type: none
-			padding-bottom: 40px
-			width: 100%
-			a
-				padding: 0 !important
-				color: #4a4a4a
-				font-family: 'Montserrat', sans-serif
-				font-size: 15px
-				font-weight: 400
-				border: 1px solid #eeeeee
-				max-width: 100%
-				width: 160px
-				height: 40px
+		.ModuleContent
+			h2
+				padding-bottom: 35px
+			nav
+				padding: 0
 				display: flex
 				justify-content: center
 				align-items: center
-				text-decoration: none
-				&:hover, &.active
-					box-shadow: 0 4px 20px rgba(19, 28, 35, 0.1)
-					background-color: #e1e1e1
-				&:nth-child(1)
-						border-radius: 0 5px 5px 0
-				&:nth-child(2)
-					border-radius: 5px 0 0 5px
-			@media (min-width: 768px)
-				a
-					width: 270px
-		.row
-			@media (max-width: 575.98px)
-				justify-content: center
-			.Module
+				text-align: center
+				flex-direction: row
+				list-style-type: none
+				padding-bottom: 40px
 				width: 100%
-				.ModuleContent
+				a
+					padding: 0 !important
+					color: #4a4a4a
+					font-family: 'Montserrat', sans-serif
+					font-size: 15px
+					font-weight: 400
+					border: 1px solid #eeeeee
+					max-width: 100%
+					width: 160px
+					height: 40px
+					display: flex
+					justify-content: center
+					align-items: center
+					text-decoration: none
+					&:hover, &.active
+						box-shadow: 0 4px 20px rgba(19, 28, 35, 0.1)
+						background-color: #e1e1e1
+					&:nth-child(1)
+							border-radius: 0 5px 5px 0
+					&:nth-child(2)
+						border-radius: 5px 0 0 5px
+				@media (min-width: 768px)
+					a
+						width: 270px
+			.container
+				.row
+					@media (max-width: 575.98px)
+						justify-content: center
 					.box-content
 						padding: 0 15px
 						text-align: center
@@ -150,34 +149,12 @@
 		.briefContent, p
 			text-align: left
 	.social-link
-		padding-top: 15px
-		display: inlline-block
-		text-align: left
+		display: inline-flex
+		text-decoration: none
+		img
+			cursor: pointer
 		a
-			display: inline-flex
-			text-decoration: none
 			padding-right: 10px
-			padding-bottom: 10px
-			span.mdi-facebook
-				width: 195px
-				height: 40px
-				background: #455fa2
-				display: inline-flex
-				justify-content: center
-				align-items: center
-				padding: 0
-				font-size: 14px
-				color: #ffffff
-				&:before
-					content: "\f20c"
-					font-family: "Material Design Icons"
-					font-weight: 400
-					width: 23px
-					height: 23px
-					display: flex
-					justify-content: center
-					align-items: center
-					font-size: 14px
 .otherNews
 	background: #f5f5f5
 	text-align: center
@@ -188,10 +165,6 @@
 		h2
 			padding-top: 0
 			padding-bottom: 2px
-		.swiper-container
-			.swiper-wrapper
-				.swiper-slide
-					background: #f5f5f5 !important
 		.btn-group
 			.swiper-button-next
 				outline: none
@@ -289,24 +262,23 @@
 			padding-top: 45px
 			.swiper-wrapper
 				.swiper-slide
+					background: #f5f5f5
 					text-align: center
 					font-size: 18px
-					background: #fff
 					display: flex
 					justify-content: center
 					align-items: center
 					figure
+						width: 100%
 						position: relative
+						img
+							width: 100%
+							height: 300px
+							@media (max-width: 991.98px)
+								height: 250px
 						figcaption
 							color: #000
 							padding-top: 10px
-							h3
-								color: #000
-								font-family: 'Roboto', sans-serif
-								font-size: 22px
-								font-weight: 400
-								text-transform: none
-								text-align: center
 							p
 								text-align: center
 								font-family: "Roboto - Regular", sans-serif
@@ -314,3 +286,8 @@
 								font-weight: 400
 								color: #000
 								text-align: center
+								overflow: hidden
+								display: -webkit-box
+								text-overflow: ellipsis
+								-webkit-line-clamp: 2
+								-webkit-box-orient: vertical
